@@ -1,5 +1,11 @@
 2015-10-16  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* elf32-i386.c (elf_i386_convert_mov_to_lea): Check if symbol
+	is defined.
+	* elf64-x86-64.c (elf_x86_64_convert_mov_to_lea): Likewise.
+
+2015-10-16  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* elf32-i386.c (elf_i386_convert_mov_to_lea): Don't check
 	def_regular.
 	* elf64-x86-64.c (elf_x86_64_convert_mov_to_lea): Likewise.
